Refactor to use new ObjectStorage library (and Amazon SDK2) Also updated other dependencies, added unit tests and removed validateConnectionAfter property since this is no longer supported by Amazons SDKv2